<resources>
    <string name="app_name">My Journal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_passwordCo">Confirm Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_login">Login </string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_share_text">Check out %1$s - %2$s</string>
    <string name="action_share_using">Share using&#8230;</string>
    <string name="action_google">Sign in with Google</string>
    <string name="prompt_telephone">Mobile Number </string>
    <string name="prompt_name">Name </string>
    <string name="icon_app">Icon app </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>
    <!-- Strings related to others login -->
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="auth_faile_online">Authentication failed </string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="name_empty">Enter your name ! </string>
    <string name="image_empty">Please upload profile picture ! </string>
    <string name="phone_empty">Please, We need your phone number ! </string>
    <string name="email_empty">Enter email address !</string>
    <string name="password_empty">Enter password !</string>
    <string name="password_confirmation">No same password !</string>
    <string name="title_activity_setup">Edit Profile</string>
    <string name="prompt_upload">CHANGE AVATAR</string>

    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_share">Share</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Add an entry </string>
    <string name="new_entry_btn_hint">Update entry </string>
    <string name="new_entry_btn_del">Delete entry </string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <string name="progress_google_signin">Starting  sign in...</string>
    <string name="post_title">Add Title</string>
    <string name="action_about">About</string>
    <string name="action_alc">Andela Learning Community</string>

    <!-- About Dialog -->
    <string name="about_version">Version 1.0</string>
    <string name="about_made_by">Made By</string>
    <string name="about_name" translatable="false">Yannick Serge Obam</string>
    <string name="about_powered_by">Powered By</string>
    <string name="about_tmdb" translatable="false">https://www.meetup.com/GDG-Ebolowa</string>
    <string name="delete_msg">   \t \t \t \t \t \t \t \t \t Do you want to delete your post ? </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
