<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.obeshor.myjournal.widget.RobotoBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorAccentTrans"
            android:textSize="@dimen/text_xxlarge"/>

        <com.obeshor.myjournal.widget.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textSize="@dimen/text_large"/>

        <ImageView
            android:src="@drawable/ic_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            tools:ignore="ContentDescription" />

        <com.obeshor.myjournal.widget.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_made_by"
            android:textSize="@dimen/text_large"/>

        <com.obeshor.myjournal.widget.RobotoBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_name"
            android:textColor="@color/colorAccentTrans"
            android:textSize="@dimen/text_large"/>

        <com.obeshor.myjournal.widget.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dist_large"
            android:text="@string/about_powered_by"
            android:textSize="@dimen/text_large"/>

        <com.obeshor.myjournal.widget.RobotoBoldTextView
            android:id="@+id/alc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_alc"
            android:textColor="@color/colorAccentTrans"
            android:textSize="@dimen/text_large"/>

    </LinearLayout>

</ScrollView>