<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryTrans"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#FFF">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:drawableLeft="@drawable/ic_email"
            android:textColor="#FFFFFF"
            android:inputType="textEmailAddress"
            android:textSize="14sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#FFF">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:drawableLeft="@drawable/ic_password"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#FFF">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordCo_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_passwordCo"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_signup"
        android:text="@string/action_sign_up"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:indeterminate="true"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</LinearLayout>